@@ -2,6 +2,7 @@
 
 export("U<-")
 export("V<-")
+export("select_matrix<-")
 export(C_code)
 export(Nn)
 export(SEIR)
@@ -24,6 +25,7 @@ export(outdegree)
 export(package_skeleton)
 export(prevalence)
 export(run_outer)
+export(select_matrix)
 export(trajectory)
 export(u0_SEIR)
 export(u0_SIR)
